# VulkanTutorial-Android

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  conanfile.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: vulkan_triangle.cpp  vulkan_triangle.h  vulkan_triangle_jni.cpp  vulkan_tutorial.cpp  vulkan_tutorial.h  vulkan_tutorial_jni.cpp
app/src/main/java/com/github/piasy/vulkantutorial/: HelloTriangleApplication.java  MainActivity.java  VulkanTutorialApplication.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/shaders/: triangle.frag  triangle.vert
gradle/wrapper/: gradle-wrapper.properties
